hphp/hack/test/typecheck/array_unification/dict_to_varray_or_darray.php
<?hh

function f(dict<string, int> $v): varray_or_darray<arraykey, int> {
  return $v;
}

function g(dict<string, int> $v): varray_or_darray<int> {
  return $v;
}

function h(dict<string, int> $v): varray_or_darray {
  return $v;
}
